@@ -1,3 +1,8 @@
+2012-05-16  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/53364
+	* g++.dg/torture/pr53364.C: New testcase.
+
 2012-05-15  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/53358
